--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,3 +1,5 @@
+name: Gatsby Publish Site
+
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
@@ -7,15 +9,16 @@ on:
 
 jobs:
   build:
-    runs-on: gatsbyjs/gatsby
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build new image
+    - uses: enriikke/gatsby-gh-pages-action@v2
       run: |
-        cd wozzyio; npm run deploy;
+        cd wozzyio; npm install; npm run deploy;
         cd ../
         find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' -type d -exec rm -rf {} +
         cd wozzyio/public; cp -r * ../../
