--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,20 +15,18 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - name: Build new image
     - uses: enriikke/gatsby-gh-pages-action@v2
       run: |
         cd wozzyio; npm install; npm run deploy;
         cd ../
         find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' -type d -exec rm -rf {} +
         cd wozzyio/public; cp -r * ../../
-    - name: Commit files
+    - uses: actions/checkout@main
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit -m "Create New Release" -a
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+    - uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.DEPLOY_TOKEN }}
         branch: ${{ github.ref }}
