--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,14 +15,12 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - uses: enriikke/gatsby-gh-pages-action@v2
-      run: |
+    - run: |
         cd wozzyio; npm install; npm run deploy;
         cd ../
         find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' -type d -exec rm -rf {} +
         cd wozzyio/public; cp -r * ../../
-    - uses: actions/checkout@main
-      run: |
+    - run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit -m "Create New Release" -a
