--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - run: |
-        cd wozzyio; npm install; npm run build;
+        cd wozzyio; npm install; npm run build; cd public; sed -i -- 's/\/static/static/g' index.html;
         cd ../
         find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' -type d -exec rm -rf {} +
         cd wozzyio/public; cp -r * ../../
