--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,20 +5,21 @@ on:
   # but only for the main branch
   push:
     branches:
-      - main
+      - develop
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@develop
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - run: |
         cd wozzyio; npm install; npm run build; cd public; sed -i -- 's/\/static/static/g' index.html;
         cd ../
-        find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' -type d -exec rm -rf {} +
+        cd ../
+        find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' ! -name '.github' ! -name 'src' ! -name 'static' ! -name 'images' ! -name 'hooks' ! -name 'info' ! -name 'logs' ! -name 'objects' ! -name 'refs' ! -name 'pages' ! -name 'styles' ! -name 'integration' ! -name 'workflows' ! -name 'components' ! -name 'COMMIT_EDITMSG' ! -name 'pack'  -type d -exec rm -rf {} +
         cd wozzyio/public; cp -r * ../../
     - run: |
         git config --local user.email "action@github.com"
