Reworkk complete build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,31 +1,18 @@
-name: Gatsby Publish Site
+name: 'Gatsby Deploy' # Name of your workflow
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
   push:
     branches:
-      - main
+      - main # The trigger of the this workflow
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
     steps:
-    - uses: actions/checkout@main
-      with:
-        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - run: |
-        find . ! -name 'Makefile' ! -name 'LICENSE' ! -name 'CHANGELOG.md' ! -name 'wozzyio' ! -name '.git' ! -name '.gitignore' ! -name 'README.md' ! -name '.github' ! -name 'src' ! -name 'static' ! -name 'images' ! -name 'hooks' ! -name 'info' ! -name 'logs' ! -name 'objects' ! -name 'refs' ! -name 'pages' ! -name 'styles' ! -name 'integration' ! -name 'workflows' ! -name 'components' ! -name 'COMMIT_EDITMSG' ! -name 'pack'  -type d -exec rm -rf {} +
-        cd wozzyio; npm install; npm run build; cd public; sed -i -- 's/\/static/static/g' index.html;
-        cd ../
-        cd ../
-        cd wozzyio/public; cp -r * ../../
-    - run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git commit -m "Create New Release" -a
-    - uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.DEPLOY_TOKEN }}
-        branch: ${{ github.ref }}
+      - uses: actions/checkout@v1 # Checkout your triggered branch
+      - uses: xmflsct/action-publish-gatsby@v1 # Uses this action to run further steps
+        with:
+          publishBranch: 'master' # Not required, default publishing branch is master
+          token: ${{ secrets.DEPLOY_TOKEN }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
+          name: 'action@github.com' # Not required, default to action's maintainer
+          email: 'GitHub Action' # Not required, default to action's maintainer
