--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
     steps:
-      - uses: actions/checkout@v1 # Checkout your triggered branch
+      - uses: actions/checkout@main # Checkout your triggered branch
       - uses: xmflsct/action-publish-gatsby@v1 # Uses this action to run further steps
         with:
           publishBranch: 'master' # Not required, default publishing branch is master
