--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,18 +1,16 @@
-name: 'Gatsby Deploy' # Name of your workflow
+name: Gatsby Publish
 
 on:
   push:
     branches:
-      - main # The trigger of the this workflow
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Action uses Docker so only Linux is supported
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main # Checkout your triggered branch
-      - uses: xmflsct/action-publish-gatsby@v1 # Uses this action to run further steps
+      - uses: actions/checkout@v1
+      - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          publishBranch: 'master' # Not required, default publishing branch is master
-          token: ${{ secrets.DEPLOY_TOKEN }} # Your personal access token of GitHub, read more below of how to obtain one and keep it safe
-          name: 'action@github.com' # Not required, default to action's maintainer
-          email: 'GitHub Action' # Not required, default to action's maintainer
+          access-token: ${{ secrets.DEPLOY_TOKEN }}
+          deploy-branch: gh-pages
